fixed image stretch. minor edits elsewhere

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -121,6 +121,8 @@
 }
 
 /* Styling for About Page */
+
+/* font family is targeted in Contact section just above */
 figcaption {
   margin-top: 1.5rem;
   font-size: 1.5rem;
@@ -143,6 +145,7 @@ figcaption {
   height: 65%;
   border-radius: 50%;
   box-shadow: 2px 2px 2px 2px lightgrey;
+  object-fit: cover;
 }
 
 .about--regexLogo {
